crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__service_accounts__test__mask_add_service_account_grant_team_admin.snap
---
source: crates/control-plane-api/src/server/public/graphql/service_accounts.rs
assertion_line: 2307
expression: response
---
{
  "data": {
    "addServiceAccountGrant": {
      "catalogName": "aliceCo/mask-bot",
      "grants": [
        {
          "capability": "read",
          "prefix": "aliceCo/"
        }
      ]
    }
  },
  "errors": null
}
