crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__service_accounts__test__mask_create_api_key_manage_service_accounts.snap
---
source: crates/control-plane-api/src/server/public/graphql/service_accounts.rs
assertion_line: 2471
expression: response
---
{
  "data": {
    "createApiKey": {
      "id": "[id]",
      "secret": "[secret]",
      "serviceAccount": {
        "catalogName": "aliceCo/mask-bot"
      }
    }
  },
  "errors": null
}
