crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__service_accounts__test__mask_create_service_account_manage_service_accounts.snap
---
source: crates/control-plane-api/src/server/public/graphql/service_accounts.rs
assertion_line: 2255
expression: response
---
{
  "data": {
    "createServiceAccount": {
      "catalogName": "aliceCo/mask-bot",
      "grants": []
    }
  },
  "errors": null
}
