crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__service_accounts__test__mask_create_service_account_viewer.snap
---
source: crates/control-plane-api/src/server/public/graphql/service_accounts.rs
assertion_line: 2268
expression: response
---
{
  "data": null,
  "errors": [
    {
      "message": "PermissionDenied: alice@example.test is not authorized to access prefix or name 'aliceCo/mask-bot' with required capability CreateServiceAccount",
      "path": [
        "createServiceAccount"
      ]
    }
  ]
}
