crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__service_accounts__test__mask_remove_all_service_account_grants_manage_service_accounts.snap
---
source: crates/control-plane-api/src/server/public/graphql/service_accounts.rs
assertion_line: 2418
expression: response
---
{
  "data": {
    "removeAllServiceAccountGrants": {
      "catalogName": "aliceCo/mask-bot",
      "grants": []
    }
  },
  "errors": null
}
