crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__service_accounts__test__mask_revoke_all_api_keys_manage_service_accounts.snap
---
source: crates/control-plane-api/src/server/public/graphql/service_accounts.rs
assertion_line: 2575
expression: response
---
{
  "data": {
    "revokeAllApiKeys": {
      "apiKeys": [],
      "catalogName": "aliceCo/mask-bot"
    }
  },
  "errors": null
}
